Added bookmark feature,digest feature,file upload to cloudinary and implemented Kafka